<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loan Simulator</string>
    <string name="amount">Requested Amount</string>
    <string name="hint_amount">Requested Amount</string>
    <string name="months">Months</string>
    <string name="hint_months">Term in Months</string>
    <string name="rate">Rate</string>
    <string name="hint_rate">Monthly Rate</string>
    <string name="btnCalculate">Calculate</string>
    <string name="CurrencySymbol">$</string>

</resources>
